v0.1.5 fix overflow images

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,6 +19,11 @@ html {
   }
 }
 
+body {
+  width: 100%;
+  overflow: hidden;
+}
+
 h1,
 h2,
 h3 {
@@ -279,6 +284,8 @@ h3 {
 
   & .couple--img {
     width: 60%;
+    max-width: 35rem;
+    max-height: 50rem;
     border-radius: 15px;
     object-fit: cover;
     object-position: center;
